--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 asgiref==3.6.0
+bleach==6.0.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
 cloudinary==1.32.0
 dj-database-url==2.0.0
 dj3-cloudinary-storage==0.0.6
 Django==4.2
+django-summernote==0.8.20.0
 gunicorn==20.1.0
 idna==3.4
+Pillow==9.5.0
 psycopg2==2.9.6
 psycopg2-binary==2.9.6
 requests==2.29.0
@@ -15,3 +18,4 @@ sqlparse==0.4.4
 typing_extensions==4.5.0
 tzdata==2023.3
 urllib3==1.26.15
+webencodings==0.5.1
