--- a/.hintrc
+++ b/.hintrc
@@ -22,6 +22,13 @@
       {
         "image-alt": "off"
       }
+    ],
+    "no-inline-styles": "off",
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off"
+      }
     ]
   }
 }
