--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,29 @@
 asgiref==3.6.0
 bleach==6.0.0
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==3.1.0
 cloudinary==1.32.0
+crispy-bootstrap4==2022.1
+cryptography==40.0.2
+defusedxml==0.7.1
 dj-database-url==2.0.0
 dj3-cloudinary-storage==0.0.6
 Django==4.2
+django-allauth==0.54.0
+django-crispy-forms==2.0
 django-summernote==0.8.20.0
 gunicorn==20.1.0
 idna==3.4
+oauthlib==3.2.2
 Pillow==9.5.0
 psycopg2==2.9.6
 psycopg2-binary==2.9.6
+pycparser==2.21
+PyJWT==2.6.0
+python3-openid==3.2.0
 requests==2.29.0
+requests-oauthlib==1.3.1
 six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.5.0
